corrected text-alight and letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@
 body {
     font-family: Roboto, sans-serif;
     font-style: normal;
+    letter-spacing: 0.03em;
 }
 
 
@@ -48,7 +49,6 @@ li {
     line-height: 1.2;
     color: var(--primary-text-color);
     text-decoration: none;
-    letter-spacing: 0.03em;
 }
 
 .logo-color {
@@ -61,19 +61,12 @@ li {
     font-size: 14px;
     line-height: 1.2;
     font-style: normal;
-}
-
-.link,
-.link-mail {
-    word-spacing: 2em;
+    letter-spacing: 0.02em;
 }
 
 .link:hover,
 .link:focus,
-.link:active {
-    color: var(--accent-color);
-}
-
+.link:active,
 .link-mail:hover,
 .link-mail:focus {
     color: var(--accent-color);
@@ -96,6 +89,7 @@ li {
     line-height: 1.2;
     color: var(--primary-white-color);
     letter-spacing: 0.06em;
+    text-align: center;
     text-transform: uppercase;
 }
 
@@ -103,6 +97,8 @@ li {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.2;
+    letter-spacing: 0.06em;
+    text-align: center;
     color: var(--primary-white-color);
     background-color: #2196f3;
 }
@@ -139,6 +135,7 @@ li {
     line-height: 1.2;
     color: var(--secont-text-color);
     letter-spacing: 0.03em;
+    text-align: center;
 }
 
 .team-name {
@@ -147,6 +144,7 @@ li {
     line-height: 1.2;
     color: var(--secont-text-color);
     letter-spacing: 0.03em;
+    text-align: center;
 }
 
 .team-name-class {
@@ -155,6 +153,7 @@ li {
     line-height: 1.2;
     color: var(--notactiv-color);
     letter-spacing: 0.03em;
+    text-align: center;
 }
 
 
@@ -171,8 +170,6 @@ li {
     font-size: 26px;
     line-height: 1.2;
     color: var(--primary-white-color);
-    text-decoration: none;
-    letter-spacing: 0.03em;
 }
 
 .logo-color {
@@ -194,7 +191,6 @@ li {
     font-size: 14px;
     line-height: 2;
     color: rgba(255, 255, 255, 0.6);
-    letter-spacing: 0.03em;
 }
 
 
@@ -206,6 +202,7 @@ button {
     line-height: 1.6;
     color: var(--primary-text-color);
     letter-spacing: 0.03em;
+    text-align: center;
 }
 
 button:hover,
@@ -225,6 +222,5 @@ button:focus {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.9;
-    letter-spacing: 0.03em;
     color: var(--notactiv-color);
 }
